spacing is fixed in character css

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -91,7 +91,7 @@
   /* height: 100%;
   width: 77.5%; */
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   text-align: center;
 }
   
@@ -116,7 +116,7 @@
   /* margin-top: -60px; */
   /* padding-bottom: 20px; */
   margin: 0px;
-  width: 195px;
+  width: 100%;
   height: 30px;
   text-align: center;
   text-shadow: 1px 1px white;
